--- a/src/css/BackgroundLogo.css
+++ b/src/css/BackgroundLogo.css
@@ -13,10 +13,34 @@
         filter: drop-shadow(8px 8px 5px var(--ac-blue-dark));
     }
 }
-
+@keyframes glow-bkg-mob {
+    0% {
+        filter: drop-shadow(4px 4px 3px var(--ac-blue-dark));
+    }
+    50% {
+        filter: drop-shadow(4px 4px 6px var(--ac-blue));
+        
+    }
+    100% {
+        filter: drop-shadow(4px 4px 3px var(--ac-blue-dark));
+    }
+}
 
 .BackgroundLogo {
     animation: glow-bkg 6000ms ease-in-out infinite;
     width: 30%;
     margin: 2%;
+}
+
+@media only screen  and (max-width: 1000px){
+    .fixed-container{
+        position: relative;
+        top: 0;
+        left: 0;
+    }
+    .BackgroundLogo {
+        margin-left: -32px;
+        animation: glow-bkg-mob 6000ms ease-in-out infinite;
+    
+    }
 }
